added new images and favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<title>danny vega.</title>
+		<title>danny.</title>
 		<!--mobile device enable-->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!--google fonts-->
@@ -363,55 +363,55 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-6 mix webdesign">
                             <div class="portfolio_wapper">
-                                <img src="assets/images/port/work-1.jpg" alt="">
+                                <img src="assets/images/black-gradient.png" alt="">
                                 <div class="portfolio_overlay"></div>
                                 <div class="hover_icon">
-                                    <a href="assets/images/port/work-1.jpg" class="venobox_design" data-gall="myGallery" data-title="Image caption here">html project</a>
+                                    <a href="assets/images/black-gradient.png" class="venobox_design" data-gall="myGallery" data-title="Image caption here">Omnifood</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6 mix photography">
                             <div class="portfolio_wapper">
-                                <img src="assets/images/port/work-2.jpg" alt="">
+                                <img src="assets/images/black-gradient.png" alt="">
                                 <div class="portfolio_overlay"></div>
                                 <div class="hover_icon">
-                                    <a href="assets/images/port/work-2.jpg" class="venobox_design" data-gall="myGallery" data-title="Image caption here">javascript project</a>
+                                    <a href="assets/images/black-gradient.png" class="venobox_design" data-gall="myGallery" data-title="Image caption here">Budget App</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6 mix development">
                             <div class="portfolio_wapper">
-                                <img src="assets/images/port/work-3.jpg" alt="">
+                                <img src="assets/images/black-gradient.png" alt="">
                                 <div class="portfolio_overlay"></div>
                                 <div class="hover_icon">
-                                    <a href="assets/images/port/work-3.jpg" class="venobox_design" data-gall="myGallery" data-title="Image caption here">graphics project</a>
+                                    <a href="assets/images/black-gradient.png" class="venobox_design" data-gall="myGallery" data-title="Image caption here">YouTube Clone</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6 mix webdesign">
                             <div class="portfolio_wapper">
-                                <img src="assets/images/port/work-4.jpg" alt="">
+                                <img src="assets/images/black-gradient.png" alt="">
                                 <div class="portfolio_overlay"></div>
                                 <div class="hover_icon">
-                                    <a href="assets/images/port/work-4.jpg" class="venobox_design" data-gall="myGallery" data-title="Image caption here">laravel project</a>
+                                    <a href="assets/images/black-gradient.png" class="venobox_design" data-gall="myGallery" data-title="Image caption here">SNKR QUIZ</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6 mix photography">
-                            <div class="portfolio_wapper"> 
-                                <img src="assets/images/port/work-5.jpg" alt="">
+                            <div class="portfolio_wapper">
+                                <img src="assets/images/black-gradient.png" alt="">
                                 <div class="portfolio_overlay"></div>
-                                <div class="hover_icon"> 
-                                    <a href="assets/images/port/work-5.jpg" class="venobox_design" data-gall="myGallery" data-title="Image caption here">bootstrap project</a> 
+                                <div class="hover_icon">
+                                    <a href="assets/images/black-gradient.png" class="venobox_design" data-gall="myGallery" data-title="Image caption here">Streetfighter Game</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6 mix development">
                             <div class="portfolio_wapper">
-                                <img src="assets/images/port/work-6.jpg" alt="">
+                                <img src="assets/images/black-gradient.png" alt="">
                                 <div class="portfolio_overlay"></div>
                                 <div class="hover_icon">
-                                    <a href="assets/images/port/work-6.jpg" class="venobox_design" data-gall="myGallery" data-title="Image caption here">wordpress project</a>
+                                    <a href="assets/images/black-gradient.png" class="venobox_design" data-gall="myGallery" data-title="Image caption here">Beer Me</a>
                                 </div>
                             </div>
                         </div>
