added links to portfolio squares

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 								</div>
 								<div class="full_resume_details">
 									<div class="my_resume_details">
-										<h3><span>2016 - present</span>Apple, Inc.</h3>
+										<h3><span>April 2016 - present</span>Apple, Inc.</h3>
 										<p>Front-End Developer</p>
 									</div>
 								</div>
@@ -319,7 +319,7 @@
 								</div>
 								<div class="full_resume_details">
 									<div class="my_resume_details">
-										<h3><span>2014 - 2016</span>Apple, Inc.</h3>
+										<h3><span>Dec. 2014 - April 2016</span>Apple, Inc.</h3>
 										<p>Software QA Engineer</p>
 									</div>
 								</div>
@@ -330,7 +330,7 @@
 								</div>
 								<div class="full_resume_details">
 									<div class="my_resume_details">
-										<h3><span>Dev Bootcamp</span>Dev Bootcamp</h3>
+										<h3><span>Aug. 2014 - Dec. 2014</span>Dev Bootcamp</h3>
 										<p>Mentor, Web Developer Apprentice</p>
 									</div>
 								</div>
@@ -351,72 +351,76 @@
 						</div>
 					</div>
 				</div>
-				<div class="row">
-                    <ul class="work_filter">
-                        <li class="filter" data-filter="all">all</li>
-                        <li class="filter" data-filter=".webdesign">webdesign</li>
-                        <li class="filter" data-filter=".development">wordpress</li>
-                        <li class="filter" data-filter=".photography">javascipt</li>
-                    </ul>
-                </div>
 				<div class="portfolio_items">
                     <div class="row">
                         <div class="col-md-4 col-sm-6 mix webdesign">
-                            <div class="portfolio_wapper">
-                                <img src="assets/images/black-gradient.png" alt="">
-                                <div class="portfolio_overlay"></div>
-                                <div class="hover_icon">
-                                    <a href="assets/images/black-gradient.png" class="venobox_design" data-gall="myGallery" data-title="Image caption here">Omnifood</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6 mix photography">
-                            <div class="portfolio_wapper">
-                                <img src="assets/images/black-gradient.png" alt="">
-                                <div class="portfolio_overlay"></div>
-                                <div class="hover_icon">
-                                    <a href="assets/images/black-gradient.png" class="venobox_design" data-gall="myGallery" data-title="Image caption here">Budget App</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6 mix development">
-                            <div class="portfolio_wapper">
-                                <img src="assets/images/black-gradient.png" alt="">
-                                <div class="portfolio_overlay"></div>
-                                <div class="hover_icon">
-                                    <a href="assets/images/black-gradient.png" class="venobox_design" data-gall="myGallery" data-title="Image caption here">YouTube Clone</a>
-                                </div>
-                            </div>
+							<a href="http://dannyevega.github.io/omni-project/" target="_blank">
+								<div class="portfolio_wapper">
+									<img src="assets/images/black-gradient.png" alt="">
+									<div class="portfolio_overlay"></div>
+									<div class="hover_icon">
+										<p>Omnifood</p>
+									</div>
+								</div>
+							</a>
                         </div>
                         <div class="col-md-4 col-sm-6 mix webdesign">
-                            <div class="portfolio_wapper">
-                                <img src="assets/images/black-gradient.png" alt="">
-                                <div class="portfolio_overlay"></div>
-                                <div class="hover_icon">
-                                    <a href="assets/images/black-gradient.png" class="venobox_design" data-gall="myGallery" data-title="Image caption here">SNKR QUIZ</a>
-                                </div>
-                            </div>
+							<a href="http://dannyevega.github.io/budget/" target="_blank">
+								<div class="portfolio_wapper">
+									<img src="assets/images/black-gradient.png" alt="">
+									<div class="portfolio_overlay"></div>
+									<div class="hover_icon">
+										<p>Budget App</p>
+									</div>
+								</div>
+							</a>
                         </div>
-                        <div class="col-md-4 col-sm-6 mix photography">
-                            <div class="portfolio_wapper">
-                                <img src="assets/images/black-gradient.png" alt="">
-                                <div class="portfolio_overlay"></div>
-                                <div class="hover_icon">
-                                    <a href="assets/images/black-gradient.png" class="venobox_design" data-gall="myGallery" data-title="Image caption here">Streetfighter Game</a>
-                                </div>
-                            </div>
+                        <div class="col-md-4 col-sm-6 mix webdesign">
+							<a href="http://dannyevega.github.io/youtube-api/" target="_blank">
+								<div class="portfolio_wapper">
+									<img src="assets/images/black-gradient.png" alt="">
+									<div class="portfolio_overlay"></div>
+									<div class="hover_icon">
+										<p>YouTube Clone</p>
+									</div>
+								</div>
+							</a>
                         </div>
-                        <div class="col-md-4 col-sm-6 mix development">
-                            <div class="portfolio_wapper">
-                                <img src="assets/images/black-gradient.png" alt="">
-                                <div class="portfolio_overlay"></div>
-                                <div class="hover_icon">
-                                    <a href="assets/images/black-gradient.png" class="venobox_design" data-gall="myGallery" data-title="Image caption here">Beer Me</a>
-                                </div>
-                            </div>
+                        <div class="col-md-4 col-sm-6 mix webdesign">
+							<a href="http://dannyevega.github.io/quiz-app/" target="_blank">
+								<div class="portfolio_wapper">
+									<img src="assets/images/black-gradient.png" alt="">
+									<div class="portfolio_overlay"></div>
+									<div class="hover_icon">
+										<p>SNKR QUIZ</p>
+									</div>
+								</div>
+							</a>
+                        </div>
+                        <div class="col-md-4 col-sm-6 mix webdesign">
+							<a href="http://dannyevega.github.io/jquery-streetfighter/" target="_blank">
+								<div class="portfolio_wapper">
+									<img src="assets/images/black-gradient.png" alt="">
+									<div class="portfolio_overlay"></div>
+									<div class="hover_icon">
+										<p>Streetfighter</p>
+									</div>
+								</div>
+							</a>
+                        </div>
+                        <div class="col-md-4 col-sm-6 mix webdesign">
+							<a href="http://dannyevega.github.io/beer-me/" target="_blank">
+								<div class="portfolio_wapper">
+									<img src="assets/images/black-gradient.png" alt="">
+									<div class="portfolio_overlay"></div>
+									<div class="hover_icon">
+										<p>Beer Me</p>
+									</div>
+								</div>
+							</a>
                         </div>
                      </div>
-                </div> 
+                </div>
 			</div>
 		</section><!--End portfolio area-->
 
