--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<div class="col-md-2 col-sm-2 col-lg-3">
 						<!--site logo area-->
 							<div class="site_logo">
-								<a href="index2.html">dv.</a>
+								<a href="index.html">dv.</a>
 							</div><!--End site logo area-->
 						</div>
 						<!--Start menu area-->
@@ -338,6 +338,14 @@
 						</div>
 					</div>
 				</div>
+				<div class="resume">
+					<div class="send">
+						<input type="submit" value="View Resume" name="submit">
+					</div>
+					<div class="send">
+						<input type="submit" value="Download Resume" name="submit">
+					</div>
+				</div>
 			</div>
 		</section><!--End experience area-->
 
@@ -590,7 +598,7 @@
 						<div class="form_area">
 							<form action="#" method="post">
 								<div class="row">
-									<div class="col-md-12 col-sm-6">
+									<div class="col-md-12 col-sm-12 input">
 										<div class="single_input">
 											<input type="text" name="name" placeholder="name" required="">
 										</div>
